--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    /*compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }*/
 
     defaultConfig {
         applicationId "com.proyecto.tucca"
+        //antes minsdkVersion 18
         minSdkVersion 18
         targetSdkVersion 29
         versionCode 1
@@ -37,9 +42,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.android.gms:play-services:10.2.1'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'de.codecrafters.tableview:tableview:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.room:room-runtime:2.2.3"
     testImplementation 'junit:junit:4.12'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
+    annotationProcessor "androidx.room:room-compiler:2.2.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
