--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,10 @@ dependencies {
     implementation 'de.codecrafters.tableview:tableview:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-    implementation "androidx.room:room-runtime:2.2.3"
     implementation "io.card:android-sdk:5.5.1"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
-    annotationProcessor "androidx.room:room-compiler:2.2.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
