--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.MenuActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
+        <activity android:name=".activities.PayActivity">
         </activity>
+        <activity
+            android:name=".activities.MenuActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".activities.NewCreditCardActivity" />
         <activity android:name=".activities.CreditCardActivity" />
         <activity
