--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,21 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.google.android.gms:play-services:10.2.1'
+    //implementation 'com.google.android.gms:play-services:8.3.0'
+    //implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'androidx.multidex:multidex:2.0.0'
-    implementation 'de.codecrafters.tableview:tableview:2.2.0'
+    implementation 'de.codecrafters.tableview:tableview:2.8.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
     implementation "io.card:android-sdk:5.5.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+//apply plugin: 'com.google.gms.google-services'
+
