--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    //implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     testImplementation 'junit:junit:4.12'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
